--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -150,6 +150,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+
                 android:paddingBottom="@dimen/activity_vertical_margin">
 
                 <TextView
@@ -158,7 +159,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/menu_list_item_price"
                     android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    />
 
                 <TextView
                     android:id="@+id/review_total_order_price_currency"
@@ -166,7 +168,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/menu_list_item_currency"
                     android:textSize="@dimen/title_text_size"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    />
 
 
             </LinearLayout>
@@ -178,7 +181,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryLight"
+                android:background="@color/colorPrimaryLight2"
                 android:translationZ="-10sp"
                 app:menu="@menu/delivery_bottom_navigation" />
 
