--- a/iDaBere/app/src/main/res/values/colors.xml
+++ b/iDaBere/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#204562</color>
-    <!--<color name="colorPrimaryDark">#303F9F</color>-->
     <color name="colorPrimaryDark">#9f0215</color>
     <color name="colorPrimaryLight">#4f7090</color>
-
 
     <color name="textColor">#FFFFFF</color>
 
@@ -12,6 +10,14 @@
     <color name="colorSecondaryDark">#690000</color>
     <color name="colorSecondaryLight">#d7463d</color>
     <color name="colorAccent">#9f0215</color>
+
+    <color name="colorPrimary2">#2C867A</color>
+    <color name="colorPrimaryLight2">#A5BFB4</color>
+
+    <color name="colorSecondary2">#702738</color>
+    <color name="colorSecondaryDark2">#A53543</color>
+    <color name="colorSecondaryLight2">#D98C84</color>
+    <color name="colorAccent2">#E8DFDA</color>
 
     <color name="expandableListChildDivider">#00000000</color>
 </resources>
