--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -77,6 +77,7 @@
 
 
                 <ListView
+                    android:id="@+id/choices_list_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
