--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -178,7 +178,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryLight2"
+                android:background="@color/colorPrimaryLight"
                 android:translationZ="-10sp"
                 app:menu="@menu/delivery_bottom_navigation" />
 
