--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -1,28 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryLight</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">@color/textColor</item>
-    </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light"></style>
 
-    <style name="AppTheme2" parent="Theme.AppCompat.Light">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary2</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryLight2</item>
-        <item name="colorAccent">@color/colorAccent2</item>
-        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
-        <item name="android:textColorPrimaryInverse">@android:color/secondary_text_dark</item>
-    </style>
-
-
-    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryLight</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
+    <style name="Dialog" parent="Theme.AppCompat.Light.Dialog"></style>
 </resources>
