--- a/iDaBere/app/src/main/res/menu/review_order_menu.xml
+++ b/iDaBere/app/src/main/res/menu/review_order_menu.xml
@@ -5,11 +5,12 @@
 
     <item
         android:id="@+id/action_search_bar_icon"
+        android:enabled="true"
         android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="0"
         android:title="@string/search_list_item_icon_label"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom|collapseActionView" />
 
 
 </menu>
