--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -4,5 +4,5 @@
         <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/colorPrimaryLight</item>
     </style>
 
-    <style name="Dialog" parent="Theme.AppCompat.Light.Dialog"></style>
+    <style name="Dialog" parent="Theme.AppCompat.Light.Dialog.Alert"></style>
 </resources>
