--- a/iDaBere/app/src/main/res/layout/menu_choice_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_choice_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:visibility="visible">
+    android:visibility="visible"
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/choice_description"
@@ -15,8 +17,7 @@
         android:id="@+id/choice_quantity_number_picker"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:max="100"
-        android:min="1"/>
+        android:solidColor="@color/cardview_shadow_start_color" />
 
 
     <TextView
