--- a/iDaBere/app/src/main/res/layout/activity_add_choice.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_choice.xml
@@ -99,7 +99,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="4">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,7 +108,7 @@
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="horizontal">
             <TextView
-                android:layout_weight="4"
+                android:layout_weight="2"
                 android:id="@+id/choice_preview_description"
                 android:text="Totale"
                 android:textStyle="bold"
@@ -130,13 +131,14 @@
                     android:text="@string/menu_list_item_currency"/>
                 <TextView
                     android:id="@+id/choice_preview_price"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:textAlignment="textEnd"
                     android:textStyle="bold"
                     android:textSize="@dimen/title_text_size"
-                    android:text="999" />
+                    android:text="9999" />
             </LinearLayout>
 
         </LinearLayout>
