--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -152,9 +152,8 @@
                 android:id="@+id/payment_bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryLight"
+                android:background="@color/colorPrimary"
                 android:translationZ="-10sp"
                 app:menu="@menu/payment_bottom_navigation"
                 app:itemIconTint="@drawable/nav_item_color_state"
@@ -169,4 +168,4 @@
 
 
 
-</LinearLayout>
+</RelativeLayout>
