--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,7 +14,8 @@
         android:id="@+id/expandable_review_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:layout_below="@+id/toolbar">
 
 
     </ExpandableListView>
@@ -63,9 +64,8 @@
                 android:id="@+id/review_bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryLight"
+                android:background="@color/colorPrimary"
                 app:menu="@menu/review_order_bottom_navigation"
                 android:translationZ="-10sp"
                 app:itemIconTint="@drawable/nav_item_color_state"
@@ -78,7 +78,7 @@
     </android.support.v7.widget.Toolbar>
 
 
-</LinearLayout>
+</RelativeLayout>
 
 
 
