--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -13,6 +13,8 @@
 
     <style name="MyActionBar" parent="Widget.AppCompat.ActionBar">
         <item name="background">@color/colorPrimary</item>
+        <item name="elevation">0dp</item>
+        <item name="android:elevation" tools:targetApi="lollipop">0dp</item>
         <item name="android:actionBarItemBackground">@color/white</item>
     </style>
 
