--- a/iDaBere/app/src/main/res/layout/activity_login.xml
+++ b/iDaBere/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,7 @@
             <Button
                 android:id="@+id/email_register_button"
                 style="?android:textAppearanceSmall"
+                android:enabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
