--- a/iDaBere/app/src/main/res/menu/menu_list_bottom_navigation.xml
+++ b/iDaBere/app/src/main/res/menu/menu_list_bottom_navigation.xml
@@ -5,8 +5,8 @@
 
     <item
         android:id="@+id/navigation_list_bar"
-        android:icon="@drawable/ic_keyboard_arrow_left_white_24dp"
-        android:title="@string/title_activity_seach_bar" />
+
+        android:title="" />
 
     <item
         android:id="@+id/navigation_total_price"
