--- a/iDaBere/app/src/main/res/layout/activity_menu.xml
+++ b/iDaBere/app/src/main/res/layout/activity_menu.xml
@@ -8,25 +8,28 @@
     android:orientation="vertical"
     tools:context="it.unitn.disi.lpsmt.idabere.activities.MenuActivity">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             android:id="@+id/loading_indicator"
-            android:visibility="gone">
+            android:visibility="gone"
+            android:layout_below="@+id/toolbar">
 
                 <ProgressBar
+                    android:id="@+id/progressBar"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_below="@+id/progressBar"
+                    android:textAlignment="center"
                     android:text="@string/gps_loading_menu_label"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <ExpandableListView
             android:id="@+id/categories_expandable_list"
