--- a/iDaBere/app/src/main/res/layout/activity_order_status.xml
+++ b/iDaBere/app/src/main/res/layout/activity_order_status.xml
@@ -19,6 +19,7 @@
         android:textStyle="bold" />
 
     <ImageView
+        android:id="@+id/qr_code_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
