--- a/iDaBere/app/src/main/res/layout/activity_list_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_list_bar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_activity_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,12 +29,38 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/no_connection_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/no_connection_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/ic_no_signal_interface_symbol"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/no_connection_image"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:textSize="@dimen/title_text_size"
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            android:text="@string/no_connection_text" />
+    </RelativeLayout>
+
+
 
     <ListView
         android:id="@+id/bars_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
     </ListView>
 
