--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/colorPrimaryLight</item>
         <item name="actionBarStyle">@style/MyActionBar</item>
+        <item name="drawerArrowStyle">@style/MyDrawerArrowToggle</item>
+
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/colorPrimary</item>
     </style>
 
@@ -24,6 +26,10 @@
 
     <style name="total_price_style">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="MyDrawerArrowToggle" parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@color/white</item>
     </style>
 
 </resources>
