--- a/iDaBere/app/src/main/res/layout/activity_list_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_list_bar.xml
@@ -32,26 +32,28 @@
     <RelativeLayout
         android:id="@+id/no_connection_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:padding="@dimen/activity_horizontal_margin">
 
         <ImageView
             android:id="@+id/no_connection_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_centerHorizontal="true"
             app:srcCompat="@drawable/ic_no_signal_interface_symbol"
-            />
+            android:layout_above="@+id/textView"
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/no_connection_image"
-            android:layout_centerHorizontal="true"
             android:textAlignment="center"
             android:textSize="@dimen/title_text_size"
             android:textColor="@android:color/black"
             android:textStyle="bold"
-            android:text="@string/no_connection_text" />
+            android:text="@string/no_connection_text"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textView" />
     </RelativeLayout>
 
 
