--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -20,65 +20,62 @@
 
             <!-- Item basic infos -->
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/item_infos_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingBottom="@dimen/menu_item_vertical_padding">
 
-                <LinearLayout
+
+                <TextView
+                    android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical">
+                    android:layout_centerVertical="true"
+                    android:text="@string/menu_list_item_name"
+                    android:textSize="@dimen/title_text_size"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/info_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/menu_list_item_name"
-                        android:textSize="@dimen/title_text_size"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/da_label"
+                    android:paddingRight="@dimen/currency_right_margin"
+                    android:text="da"
+                    android:textSize="@dimen/paragraph_text_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="38dp"
+                    android:layout_marginEnd="38dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
 
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/item_price_currency"
+                    android:paddingRight="@dimen/currency_right_margin"
+                    android:text="@string/menu_list_item_currency"
+                    android:textSize="@dimen/paragraph_text_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/item_price"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|right">
-
-                    <TextView
-                        android:id="@+id/da_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingRight="@dimen/currency_right_margin"
-                        android:text="da"
-                        android:textSize="@dimen/paragraph_text_size" />
-
-                    <TextView
-                        android:id="@+id/item_price_currency"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingRight="@dimen/currency_right_margin"
-                        android:text="@string/menu_list_item_currency"
-                        android:textSize="@dimen/paragraph_text_size" />
-
-                    <TextView
-                        android:id="@+id/item_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/menu_list_item_price"
-                        android:textSize="@dimen/paragraph_text_size"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/item_price"
+                    android:text="@string/menu_list_item_price"
+                    android:textSize="@dimen/paragraph_text_size"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
 
 
-                </LinearLayout>
-
-
-            </LinearLayout>
+            </RelativeLayout>
 
             <!-- Choices section -->
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/choices_section_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,6 +99,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/choices_linear_layout"
                     android:orientation="horizontal"
                     android:paddingTop="@dimen/menu_item_vertical_padding">
 
@@ -131,7 +129,7 @@
 
                 </LinearLayout>
 
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
 
     </LinearLayout>
