--- a/iDaBere/app/src/main/res/layout/activity_add_choice.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_choice.xml
@@ -17,15 +17,33 @@
         android:orientation="vertical"
         android:layout_marginBottom="0dp">
 
-        <TextView
-            android:id="@+id/menu_item_name_tv"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:text="Nome item"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textSize="@dimen/title_text_size"/>
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:id="@+id/menu_item_name_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nome item"
+                android:textAlignment="center"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/menu_item_discount_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:text="-35%"
+                android:textAlignment="center"
+                android:textColor="@color/dealIconColor"
+                android:textSize="@dimen/paragraph_text_size"
+                android:textStyle="bold" />
+
+        </FrameLayout>
+
 
         <TextView
             android:id="@+id/size_title_label"
@@ -73,9 +91,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_weight="1"
-        android:layout_marginBottom="@dimen/activity_vertical_margin">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/additions_title_label"
@@ -84,8 +102,8 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:text="@string/additions_label_title"
             android:textSize="@dimen/title_text_size"
-            tools:text="@string/additions_label_title"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="@string/additions_label_title" />
 
         <ListView
             android:id="@+id/additions_list_view"
