--- a/iDaBere/app/src/main/res/layout/size_choice.xml
+++ b/iDaBere/app/src/main/res/layout/size_choice.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/addition_choice_row"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_horizontal_margin">
+    android:layout_margin="@dimen/activity_horizontal_margin"
+    android:orientation="horizontal">
 
 
     <RadioButton
@@ -13,33 +12,52 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/small_size_label"
-        android:textSize="@dimen/title_text_size"
-        />
+        android:textSize="@dimen/title_text_size" />
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:gravity="right">
+        android:paddingRight="@dimen/currency_right_margin"
+        android:text="@string/menu_list_item_currency"
+        android:textSize="@dimen/paragraph_text_size"
+        android:id="@+id/currency_old"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/price_old"
+        android:layout_toStartOf="@+id/price_old" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/menu_list_item_currency"
-            android:paddingRight="@dimen/currency_right_margin"
-            android:textSize="@dimen/paragraph_text_size"/>
-        <TextView
-            android:id="@+id/size_price_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/menu_list_item_price"
-            android:textSize="@dimen/paragraph_text_size"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="@dimen/discount_right_margin"
+        android:text="@string/menu_list_item_price"
+        android:textSize="@dimen/paragraph_text_size"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/textView"
+        android:layout_toStartOf="@+id/textView"
+
+        android:id="@+id/price_old" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/size_price_label"
+        android:layout_toStartOf="@+id/size_price_label"
+        android:paddingRight="@dimen/currency_right_margin"
+        android:text="@string/menu_list_item_currency"
+        android:textSize="@dimen/paragraph_text_size"
+        android:id="@+id/textView" />
+
+    <TextView
+        android:id="@+id/size_price_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:textStyle="bold"
+        android:text="@string/menu_list_item_price"
+        android:textSize="@dimen/paragraph_text_size" />
 
 
-
-    </LinearLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
