--- a/iDaBere/app/src/main/res/values/dimens.xml
+++ b/iDaBere/app/src/main/res/values/dimens.xml
@@ -28,6 +28,7 @@
     </dimen>
 
     <dimen name="currency_right_margin">5dp</dimen>
+    <dimen name="discount_right_margin">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="elevation">20dp</dimen>
 
